src/scss/06_components/misc/_select-paragraph.scss
$button-height: 4rem;
$button-width: 3.5rem;
$button-border-thickness: 2px;
$button-border-radius: 6px;
$button-wrapper-width: 500px;
$button-default-color: $color-white;
$button-active-color: var(--gin-color-primary);

.js .hdbt-admin .field--widget-paragraphs .paragraphs-dropbutton-wrapper {
  // Remove obsolete spaces from drop button wrappers.
  .dropbutton-multiple {
    margin: 0;
    padding: 0;
  }

  // Remove obsolete spaces from drop button widget.
  .dropbutton-widget {
    margin: 0 !important;
  }
}

.hdbt-admin .select-paragraph,
.js .hdbt-admin .select-paragraph,
.js.no-touchevents .hdbt-admin .select-paragraph {
  // Override Gin styles for the drop button (paragraph selection).
  &.dropbutton {
    background-color: $button-default-color;
    border: $button-border-thickness solid $button-active-color;
    border-radius: $button-border-radius;
    height: $button-height;
    min-height: $button-height;
    width: $button-wrapper-width;

    // Override Gin styles for the drop button items (the list of paragraphs).
    .dropbutton__items {
      border: $button-border-thickness solid $button-active-color;
      box-shadow: none;
      margin-inline-start: -$button-border-thickness;
      max-height: 40vh;
      min-width: calc($button-wrapper-width - $button-border-thickness * 2);
      padding: 0;
    }

    // Override Gin styles for the single drop button item.
    .dropbutton__item {
      border: 0;
      box-shadow: none;
      margin: 0 !important;
      max-width: 100%;
    }
  }

  // Override Gin styles for the paragraph list visibility toggle button.
  .dropbutton__toggle {
    border: $button-border-thickness solid $button-active-color !important;
    border-radius: 0 $button-border-radius $button-border-radius 0;
    margin-block-start: -$button-border-thickness;
    margin-inline-end: -$button-border-thickness;
    min-height: $button-height;
    min-width: $button-width;
    z-index: 5;

    &:hover,
    &:focus {
      background-color: $button-active-color;
      box-shadow: none;
    }

    &::before {
      mask-size: 18px 18px;
    }
  }

  // Paragraph type thumbnail.
  .select-paragraph__thumbnail {
    background-color: $button-default-color;
    border-block-end: 0;
    border-block-start: 0;
    border-inline-end: $button-border-thickness solid $button-active-color;
    border-inline-start: 0;
    border-radius: $button-border-radius 0 0 $button-border-radius;
    height: calc(#{$button-height} - (#{$button-border-thickness} * 2));
    object-fit: cover;
    transition: transform .2s ease-in-out;
    width: 100px;
  }

  // Paragraph type selection wrapper for thumbnail and input tag.
  .select-paragraph__wrapper {
    align-items: center;
    background-color: $button-default-color;
    border: 0 !important;
    border-radius: $button-border-radius calc($button-border-radius - 2px) calc($button-border-radius - 2px) $button-border-radius; // Border radius reveals white background on preview image hover if border is the default.
    display: flex;
    height: 100%;
    margin: 0;
    padding: 0;
    width: 100%;

    &:hover {
      background-color: $button-active-color;
      box-shadow: none;

      input.button {
        color: $button-default-color;
      }
    }

    // The input field styles must be as specific as this,
    // otherwise the Gin default styles will be used.
    .button.field-add-more-submit {
      border: none !important;
      border-radius: 0;
      box-shadow: none;
      display: block;
      font-size: remify(14px);
      margin: 0;
      min-height: calc(#{$button-height} - (#{$button-border-thickness} * 2));
      padding: 0 0 0 $spacing;
      text-align: left;
      width: 100%;

      &:hover {
        background-color: $button-active-color;
      }
    }
  }
}

// Handle styles for the drop button items (the list of paragraphs) when
// the paragraph selection is open on either up or down.
.hdbt-admin .open {
  &.paragraphs-open--up {
    .dropbutton__items {
      border-radius: $button-border-radius $button-border-radius 0 0;
      margin-top: 4px;
    }

    .select-paragraph.dropbutton {
      border-radius: 0 0 $button-border-radius $button-border-radius;
    }
  }

  &.paragraphs-open--down {
    .dropbutton__items {
      border-radius: 0 0 $button-border-radius $button-border-radius;
      margin-block-start: -1px; // The margin-block-start is necessary to avoid a double border.
    }

    .select-paragraph.dropbutton {
      border-radius: $button-border-radius $button-border-radius 0 0;
    }
  }
}

